--- a/PCA/PCA/Views/Shared/_Layout.cshtml
+++ b/PCA/PCA/Views/Shared/_Layout.cshtml
@@ -31,8 +31,12 @@
                     </div>
                 </a>
             </div>
+            <div id="menubar" class="row">
+                <div class="col-xs-12">
+
+                </div>
+            </div>
             <!-- End Header Bar -->
-            <!-- Navigation -->
             <div id="BodyContainer" class="container-fluid">
                 <div id="ContentRow" class="row">
                     <div id="Body" class="col-xs-12">
