--- a/PCA/PCA/Views/Shared/_LayoutForm.cshtml
+++ b/PCA/PCA/Views/Shared/_LayoutForm.cshtml
@@ -6,100 +6,71 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css">
     <link href="~/Content/Layout.css" rel="stylesheet" />
-    
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Cabin" rel="stylesheet">
     @RenderSection("css", false)
 </head>
 <!-- End Head -->
 <!-- Body -->
 <body>
-    <!-- Header Bar -->
-    <div class="container-fluid">
-        <div class="row">
-            <div id="navbar" class="col-xs-12">
-                <div id="logo" class="col-xs-12 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3 col-xl-2 col-xl-offset-5">
-                    <img class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 col-xl-2 col-xl-offset-5" src="~/Content/Images/pcalogo.png" />
-                </div>
-            </div>
-        </div>
-        <!-- End Header Bar -->
-        <!-- Navigation -->
-        <div class="row">
-            <div id="Navigation" class="col-xs-12">
-                <div id="NavigationLinks" class="col-xs-12 col-sm-12 col-md-8 col-lg-6 col-xl-4">
-                    <a href="/Dashboard/Index/@ViewBag.CurrentProjectNumber"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavDashboard", false)">DASHBOARD</span></a>
-                    <a href="/Contract/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavContracts", false)">CONTRACTS</span></a>
-                    <a href="/Budget/Index/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavBudgets", false)">BUDGETS</span></a>
-                    <a href="/Invoice/"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavInvoices", false)">INVOICE</span></a>
-                    <a href="/DailyReport/Index"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavDailyReport", false)">DAILY REPORT</span></a>
-                    <a href="/Report/Index"><span class="NavigationLinkItem col-xs-4 col-md-2 @RenderSection("sideNavReport", false)">REPORTS</span></a>
-                </div>
-
-                <div id="CurrentUser" class="col-xs-12 col-md-4 col-lg-6 col-xl-4">
-                    <a href="/"><p id="CurrentUserText">Hello, <u>USER</u>. Log Out</p></a>
-                </div>
-            </div>
+    <div class="container-fluid backdrop">
 
 
-        </div>
-
-        <div class="row">
-            <div id="Body" class="col-xs-12 col-md-8 col-md-offset-2">
-                <div class="panel panel-default panelShadow">
-                    <div class="panel-heading col-xs-12">
-                        <span class="headingElements col-xs-12">
-                            <span id="headerLeft" class="col-xs-4">@RenderSection("headerLeft", false)</span>
-                            <span class="headingText col-xs-4">@ViewBag.PanelTitle</span>
-                            <span id="headerLeft" class="col-xs-4 headingRight">@RenderSection("headerRight", false)</span>
-                        </span>
+        <!-- Header Bar -->
+        <div class="container-fluid main">
+            <div id="rowLogo" class="row">
+                <a href="/Dashboard/Index">
+                    <div id="navbar" class="col-xs-12">
+                        <div id="logo" class="col-xs-12 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3 col-xl-2 col-xl-offset-5">
+                            <img class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 col-xl-2 col-xl-offset-5" src="~/Content/Images/pcalogo.png" />
+                        </div>
                     </div>
+                </a>
+            </div>
+            <!-- End Header Bar -->
+            <!-- Navigation -->
+            <div id="BodyContainer" class="container-fluid">
+                <div class="row">
+                    <div id="Body" class="col-xs-12 col-md-8 col-md-offset-2">
+                        <div class="panel panel-default panelShadow">
+                            <div class="panel-heading col-xs-12">
+                                <span class="headingElements col-xs-12">
+                                    <span id="headerLeft" class="col-xs-4">@RenderSection("headerLeft", false)</span>
+                                    <span class="headingText col-xs-4">@ViewBag.PanelTitle</span>
+                                    <span id="headerLeft" class="col-xs-4 headingRight">@RenderSection("headerRight", false)</span>
+                                </span>
+                            </div>
 
-                    <div class="panel-body">
-                        @RenderBody()
+                            <div class="panel-body">
+                                @RenderBody()
+                            </div>
+
+                        </div>
                     </div>
-                        
+                </div>
+
+                <!-- End Body -->
+                <!-- Footer -->
+                <div class="row">
+                    <p>&copy; @DateTime.Now.Year - Planning & Construction Associates Inc.</p>
                 </div>
             </div>
+
+
+
         </div>
-
-        <!-- End Body -->
-        <!-- Footer -->
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Planning & Construction Associates Inc.</p>
-        </footer>
     </div>
-
-    <div class="row">
-        <a href="/Dashboard/Select">
-            <div id="Footer" class="col-xs-12">
-                <p id="CurrentProjectText">
-                    @if (@ViewBag.CurrentProjectNumber == null)
-                    {
-                        <span>No Project Selected.</span>
-                    }
-                    else
-                    {
-                        @ViewBag.CurrentProjectString
-                    }
-                </p>
-            </div>
-        </a>
-    </div>
-
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
     <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js"></script>
     <script src="~/Scripts/Layout.js"></script>
     <script src="~/Scripts/PCA.js"></script>
-    
-    
-
+    @RenderSection("scripts", required: false)
 </body>
 </html>
