--- a/PCA/PCA/Views/Dashboard/Index.cshtml
+++ b/PCA/PCA/Views/Dashboard/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@section css 
+@section css
 {
     <link href="~/Content/Dashboard.css" rel="stylesheet" />
 }
@@ -26,20 +26,6 @@
                 </div>
             </div>
             <div class="panel-body col-xs-12">
-                <span>Project:</span>
-                <span class="dropdown">
-                    <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                        <span id="SelectProject">All</span>
-                        <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li class="projectselection" data-project-name="All" data-project-id="0"><a href="#">All</a></li>
-                        @foreach (var p in ViewBag.ProjectList)
-                        {
-                            <li class="projectselection" data-project-name="@p.Name" data-project-id="@p.ProjectId"><a href="#">@p.Name</a></li>
-                        }
-                    </ul>
-                </span>
 
             </div>
         </div>
@@ -54,20 +40,24 @@
                     </div>
                 </div>
             </div>
-            <div class="panel-body col-xs-12">
-                TEST<br />
-                TEST<br />
-                TEST<br />
+            <div class="panel-body col-xs-12 text-center">
+                <div class="btn-group" role="group" aria-label="...">
+                    <button type="button" class="btn btn-default">REPORTS</button>
+                    <button type="button" class="btn btn-default">ADMIN</button>
+                    <button type="button" class="btn btn-default">PROJECTS</button>
+                    <button type="button" class="btn btn-default">SETTINGS</button>
+                    <button type="button" class="btn btn-default">USER</button>
+                </div>
 
             </div>
         </div>
     </div>
 </div>
 
-<div class="row">
-    <!-- Column 2 -->
-    <div class="col-xs-3">
-        <div class="panel panel-default col-xs-12">
+<div class="row" id="workflow-row">
+    <!-- BUDGETS -->
+    <div class="col-xs-6 col-md-3 workflow-div">
+        <div class="panel panel-default col-xs-12 workflow-panel">
             <a href="/Budget/" class="panel-heading col-xs-12">
                 <div class="headingElements">
                     <div class="col-xs-4"></div>
@@ -76,8 +66,8 @@
                     </div>
                 </div>
             </a>
-            
-            <div class="panel-body col-xs-12">
+
+            <div class="panel-body col-xs-12 workflow-panel-body">
 
                 <div class="col-xs-6">
 
@@ -89,17 +79,13 @@
                         <li class="list-group-item">Approved</li>
                     </ul>
                 </div>
-
-                <div class="col-xs-12">
-                    <hr />
-                </div>
             </div>
         </div>
     </div>
 
-    <!-- Column 3 -->
-    <div class="col-xs-3">
-        <div class="panel panel-default col-xs-12">
+    <!-- CONTRACTS -->
+    <div class="col-xs-6 col-md-3 workflow-div">
+        <div class="panel panel-default col-xs-12 workflow-panel">
             <div class="panel-heading col-xs-12">
                 <div class="headingElements">
                     <div class="col-xs-4"></div>
@@ -108,7 +94,7 @@
                     </div>
                 </div>
             </div>
-            <div class="panel-body col-xs-12">
+            <div class="panel-body col-xs-12 workflow-panel-body">
 
                 <div class="col-xs-6">
 
@@ -122,17 +108,13 @@
                         <li class="list-group-item">Posted</li>
                     </ul>
                 </div>
-
-                <div class="col-xs-12">
-                    <hr />
-                </div>
             </div>
         </div>
     </div>
 
-    <!-- Column 2 -->
-    <div class="col-xs-3">
-        <div class="panel panel-default col-xs-12">
+    <!-- INVOCES -->
+    <div class="col-xs-6 col-md-3 workflow-div">
+        <div class="panel panel-default col-xs-12 workflow-panel">
             <div class="panel-heading col-xs-12">
                 <div class="headingElements">
                     <div class="col-xs-4"></div>
@@ -141,7 +123,7 @@
                     </div>
                 </div>
             </div>
-            <div class="panel-body col-xs-12">
+            <div class="panel-body col-xs-12 workflow-panel-body">
 
                 <div class="col-xs-6">
 
@@ -156,17 +138,13 @@
                         <li class="list-group-item">Paid</li>
                     </ul>
                 </div>
-
-                <div class="col-xs-12">
-                    <hr />
-                </div>
             </div>
         </div>
     </div>
 
-    <!-- Column 2 -->
-    <div class="col-xs-3">
-        <div class="panel panel-default col-xs-12">
+    <!-- DAILY REPORTS -->
+    <div class="col-xs-6 col-md-3 workflow-div">
+        <div class="panel panel-default col-xs-12 workflow-panel">
             <a href="/DailyReport/Select" class="panel-heading col-xs-12">
                 <div class="headingElements">
                     <div class="col-xs-2"></div>
@@ -175,21 +153,27 @@
                     </div>
                 </div>
             </a>
-            <div class="panel-body col-xs-12">
+            <div class="panel-body col-xs-12 workflow-panel-body">
 
                 <div class="col-xs-6">
 
                 </div>
+
+                @{
+                    string drp = "";
+                    string drr = "";
+                    string dra = "";
+                    if (Model.DailyReportPending > 0) { drp = "list-group-item-success  workflow-link"; }
+                    if (Model.DailyReportReviewed > 0) { drr = "list-group-item-success  workflow-link"; }
+                    if (Model.DailyReportApproved > 0) { dra = "list-group-item-success  workflow-link"; }
+                }
+
                 <div class="col-md-12">
                     <ul class="list-group">
-                        <li class="list-group-item workflow-link" data-workflow-status="Pending">Pending</li>
-                        <li class="list-group-item workflow-link" data-workflow-status="Reviewed">Reviewed</li>
-                        <li class="list-group-item workflow-link" data-workflow-status="Approved">Approved</li>
+                        <li class="list-group-item @drp" data-workflow-status="Pending">Pending</li>
+                        <li class="list-group-item @drr" data-workflow-status="Reviewed">Reviewed</li>
+                        <li class="list-group-item @dra" data-workflow-status="Approved">Approved</li>
                     </ul>
-                </div>
-
-                <div class="col-xs-12">
-                    <hr />
                 </div>
             </div>
         </div>
