--- a/PCA/PCA/Content/Dashboard.css
+++ b/PCA/PCA/Content/Dashboard.css
@@ -42,3 +42,13 @@ td, tr, tbody{
 .workflow-panel-body{
     padding-top: 5%; /* https://css-tricks.com/centering-css-complete-guide/ */
 }
+
+.list-group-item{
+    text-align: center;
+    font-size: 1.15em;
+    height: 30px;
+    font-family: Arial;
+    padding-top: 0.4em;
+
+
+}
