--- a/PCA/PCA/Content/Layout.css
+++ b/PCA/PCA/Content/Layout.css
@@ -7,9 +7,18 @@
 }
 
 #menubar{
-    background-color: #064979;
-    box-shadow: inset 0px -5px 10px #05304E;
-    height: 50px;
+    background-color: #ccc;
+
+    height: 55px;
+    /*border-top-width: 2px;
+    border-bottom-width: 2px;
+    border-style: solid;
+    border-color: #777;
+    border-top-color: #ddd;
+    border-left-width: 0px;
+    box-shadow: inset 0px -5px 10px #999;
+    border-right-width: 0px;*/
+
 }
 
 .panel > .panel-heading{
@@ -17,7 +26,7 @@
     padding-bottom: 8px;
     padding-left: 0px;
     padding-right: 0px;
-    background-color: #222;
+    background-color: #003;
     color: white;
     font-size: 0.7em;
     height: 50px;
@@ -42,7 +51,7 @@
     background-repeat: repeat;
     background-color: #eee;
     box-shadow: 0px 0px 20px 15px rgba(0, 0, 0, 0.7);
-
+    max-width: 1400px;
 
 }
 
