--- a/PCA/PCA/Views/Shared/_Layout.cshtml
+++ b/PCA/PCA/Views/Shared/_Layout.cshtml
@@ -25,8 +25,8 @@
             <div id="rowLogo" class="row">
                 <a href="/Dashboard/Index">
                     <div id="navbar" class="col-xs-12">
-                        <div id="logo" class="col-xs-12 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3 col-xl-2 col-xl-offset-5">
-                            <img class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 col-xl-2 col-xl-offset-5" src="~/Content/Images/pcalogo.png" />
+                        <div id="logo" class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-10 col-lg-offset-1">
+                            <img class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4" src="~/Content/Images/pcalogo.png" />
                         </div>
                     </div>
                 </a>
