--- a/PCA/PCA/Views/Dashboard/Index.cshtml
+++ b/PCA/PCA/Views/Dashboard/Index.cshtml
@@ -14,61 +14,26 @@
     <script src="~/Scripts/PCA.js"></script>
     <script src="~/Scripts/Dashboard.js"></script>
 }
-<div class="row">
-    <div class="col-xs-6">
-        <div class="panel panel-default col-xs-12">
-            <div class="panel-heading col-xs-12">
-                <div class="headingElements">
-                    <div class="col-xs-4"></div>
-                    <div class="headingText col-xs-4">
-                        <span>PROJECT</span>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-body col-xs-12">
-
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-6">
-        <div class="panel panel-default col-xs-12">
-            <div class="panel-heading col-xs-12">
-                <div class="headingElements">
-                    <div class="col-xs-4"></div>
-                    <div class="headingText col-xs-4">
-                        <span>LINKS</span>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-body col-xs-12 text-center">
-                <div class="btn-group" role="group" aria-label="...">
-                    <button type="button" class="btn btn-default">REPORTS</button>
-                    <button type="button" class="btn btn-default">ADMIN</button>
-                    <button type="button" class="btn btn-default">PROJECTS</button>
-                    <button type="button" class="btn btn-default">SETTINGS</button>
-                    <button type="button" class="btn btn-default">USER</button>
-                </div>
-
-            </div>
-        </div>
-    </div>
-</div>
 
 <div class="row" id="workflow-row">
     <!-- BUDGETS -->
     <div class="col-xs-6 col-md-3 workflow-div">
         <div class="panel panel-default col-xs-12 workflow-panel">
-            <a href="/Budget/" class="panel-heading col-xs-12">
+            <!--<a href="/Budget/" class="panel-heading col-xs-12">
                 <div class="headingElements">
                     <div class="col-xs-4"></div>
                     <div class="headingText col-xs-4">
                         <span>BUDGETS</span>
                     </div>
                 </div>
-            </a>
+            </a>-->
 
             <div class="panel-body col-xs-12 workflow-panel-body">
-
+                <div class="col-xs-12">
+                    <span class="glyphicon glyphicon-usd"></span>
+                    <span class="dashboard-heading">BUDGETS</span>
+                    <hr />
+                </div>
                 <div class="col-xs-6">
 
                 </div>
@@ -86,16 +51,19 @@
     <!-- CONTRACTS -->
     <div class="col-xs-6 col-md-3 workflow-div">
         <div class="panel panel-default col-xs-12 workflow-panel">
-            <div class="panel-heading col-xs-12">
+            <!--<div class="panel-heading col-xs-12">
                 <div class="headingElements">
                     <div class="col-xs-4"></div>
                     <div class="headingText col-xs-4">
                         <span>CONTRACTS</span>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <div class="panel-body col-xs-12 workflow-panel-body">
-
+                <div class="col-xs-12">
+                    <div class="dashboard-heading">CONTRACTS</div>
+                    <hr />
+                </div>
                 <div class="col-xs-6">
 
                 </div>
@@ -115,16 +83,19 @@
     <!-- INVOCES -->
     <div class="col-xs-6 col-md-3 workflow-div">
         <div class="panel panel-default col-xs-12 workflow-panel">
-            <div class="panel-heading col-xs-12">
+            <!-- <div class="panel-heading col-xs-12">
                 <div class="headingElements">
                     <div class="col-xs-4"></div>
                     <div class="headingText col-xs-4">
                         <span>INVOICES</span>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <div class="panel-body col-xs-12 workflow-panel-body">
-
+                <div class="col-xs-12">
+                    <div class="dashboard-heading">INVOICES</div>
+                    <hr />
+                </div>
                 <div class="col-xs-6">
 
                 </div>
@@ -155,9 +126,7 @@
             </a>
             <div class="panel-body col-xs-12 workflow-panel-body">
 
-                <div class="col-xs-6">
 
-                </div>
 
                 @{
                     string drp = "";
@@ -174,6 +143,28 @@
                         <li class="list-group-item @drr" data-workflow-status="Reviewed">Reviewed</li>
                         <li class="list-group-item @dra" data-workflow-status="Approved">Approved</li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div id="links" class="col-xs-12">
+        <div class="panel panel-default col-xs-12">
+            <!-- <div class="panel-heading col-xs-12">
+                <div class="headingElements">
+                    <div class="col-xs-4"></div>
+                    <div class="headingText col-xs-4">
+                        <span>PROJECT</span>
+                    </div>
+                </div>
+            </div>-->
+            <div class="panel-body col-xs-12">
+                <div class="col-xs-12">
+                    <span class="glyphicon glyphicon-duplicate"></span>
+                    <span class="dashboard-heading">LINKS</span>
+                    <hr />
                 </div>
             </div>
         </div>
