--- a/PCA/PCA/Content/Layout.css
+++ b/PCA/PCA/Content/Layout.css
@@ -1,4 +1,6 @@
-﻿body {
+﻿
+/* Mail website components */
+body {
     padding-top: 0px;
     margin-top: 0px;
     background: #ddd;
@@ -6,10 +8,20 @@
     height: 100vh;
 }
 
-#menubar{
-    background-color: #002F74;
-    box-shadow: inset 0px -10px 0px #001f4d;
+#navbar {
+    background-color: white;
+    /*box-shadow: inset 0px -3px 5px #666;
+    padding-bottom: 8px;*/
+}
 
+
+#navbar:hover{
+    opacity: .4;
+}
+
+#menubar{
+    background-color: #0f3267;
+    box-shadow: inset 0px -10px 0px #0a2143;
     height: 55px;
     /*border-top-width: 2px;
     border-bottom-width: 2px;
@@ -22,6 +34,27 @@
 
 }
 
+.main{
+    border-left: solid 0px #555;
+    border-right: solid 0px #001f4d;
+    height: 100vh;
+    background-repeat: repeat;
+    background-color: #eee;
+    box-shadow: 0px 0px 20px 15px rgba(0, 0, 20, 0.5);
+    max-width: 1400px;
+
+}
+
+.backdrop {
+    padding-left: 5%;
+    padding-right: 5%;
+    height: 100vh;
+    background-image: url('Images/random_grey_variations.png');
+}
+
+ 
+/* Panels */
+
 .panel > .panel-heading{
     padding-top: 5px;
     padding-bottom: 8px;
@@ -29,7 +62,7 @@
     padding-right: 0px;
     background-color: #eee;
     color: #555;
-    font-size: 0.7em;
+    font-size: 0.8em;
     font-weight: 600;
     height: 40px;
     padding-top: 10px;
@@ -40,23 +73,7 @@
     background-color: #0b132b;
 }
 
-.backdrop {
-    padding-left: 5%;
-    padding-right: 5%;
-    height: 100vh;
-    background-image: url('Images/loginbkrd.jpg');
-}
 
-.main{
-    border-left: solid 5px #001f4d;
-    border-right: solid 5px #001f4d;
-    height: 100vh;
-    background-repeat: repeat;
-    background-color: #eee;
-    box-shadow: 0px 0px 20px 15px rgba(0, 0, 20, 0.5);
-    max-width: 1400px;
-
-}
 
 .button-primary{
     background-color: #edfbc1 !important;
@@ -101,30 +118,9 @@
     width: 100%;
 }
 
-.thumbPicture{
-    position: absolute;
-    max-width: 100%;
-    max-height: 100%;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    
-}
-
 .headingElements{
     padding: 0px;
 
-}
-
-#navbar {
-    background-color: white;
-    /*box-shadow: inset 0px -3px 5px #666;
-    padding-bottom: 8px;*/
-}
-
-
-#navbar:hover{
-    opacity: .4;
 }
 
 .heading-1{
@@ -294,22 +290,22 @@
  }
  
 #LinkButtonSelected > .sorting_1 {
-    background-color: #0b132b!important;
+    background-color: #aaa!important;
 }
 
 #LinkButtonSelected > td {
-     background-color: #1c2541!important;
-     color: white;
+     background-color: #bbb!important;
+     color: #333;
      transition: background-color ease-in-out 200ms;
      transition: color ease-in-out 150ms;
  }
 
 #selectedPhase > .sorting_1 {
-    background-color: #0b132b!important;
+    background-color: #aaa!important;
 }
 
 #selectedPhase > td {
-    background-color: #1c2541!important;
+    background-color: #bbb!important;
      color: white;
      transition: background-color ease-in-out 200ms;
      transition: color ease-in-out 150ms;
@@ -329,4 +325,9 @@
 
 .textcenter{
     text-align: center;
+}
+
+th{
+    text-align: center;
+    font-size: 1.1em;
 }
